# revml

./: pyproject.toml
contract/decoder/: model.py
contract/encoder/: pipeline.py
notebooks/: contract.decoder.train.ipynb
revml/contract/: layers.py  model.py  pipeline.py
revml/contract/decoder/: model.py  pipeline.py
revml/contract/encoder/: pipeline.py
tests/contract/: test_model.py  test_pipeline.py
tests/contract/decoder/: test_decoder_pipeline.py  test_pipeline.py
tests/contract/encoder/: test_pipeline.py
